# fast-antx

./: README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml
docs/: README.md
src/fast_antx/: utils.py
tests/: benchmark.py
tests/test1/in/: pattern.txt  source_pos.txt  target_plain.txt
